--- a/index.html
+++ b/index.html
@@ -98,6 +98,37 @@
         
     </header>
     <main>
+        <section class="Habits">
+            <div class="second-text">
+                <h1>Change Your Habits</h1>
+                <p></p>
+
+            </div>
+            <div class="second-img">
+                <div class="div1">
+                    <img src="./images/image 3.png" alt="">
+                    <h3>Movement</h3>
+                    <p></p>
+                </div>
+                <div class="div2">
+                    <img src="./images/image 2.png" alt="">
+                    <h3>Time</h3>
+                    <p></p>
+                </div>
+                <div class="div3">
+                    <img src="./images/image 4.png" alt="">
+                    <h3>Practice</h3>
+                    <p></p>
+                </div>
+                <div class="div4">
+                    <img src="./images/image 5.png" alt="">
+                    <h3>Weight Loss</h3>
+                    <p></p>
+                </div>
+            </div>
+
+
+        </section>
 
     </main>
     <footer>
