--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         <section class="Habits">
             <div class="second-text">
                 <h1>Change Your Habits</h1>
-                <p></p>
+                <p> For ensure better life fitness is must.Fitness should be accessible<br>
+                to everyone,everywhere. So, change your habits ,change your life.</p>
 
             </div>
             <div class="second-img">
@@ -129,6 +130,23 @@
 
 
         </section>
+        <section class="run-total">
+        <div class="run">
+          <div class="run-text">
+            <h1>Run an Extra<br> mile Easily</h1>
+            <p></p>
+            <button>Join Now</button>
+
+          </div>
+          <div class="run-image">
+           <img src="./images/run.jpg">
+
+
+          </div>
+
+        </div>
+    </section>
+
 
     </main>
     <footer>
