--- a/index.html
+++ b/index.html
@@ -332,18 +332,18 @@
                     <div class="row-one">
                         <div class="member">
                             <img src="./images/trainer1.png" alt="">
-                            <h4 class="tt"></h4>
-                            <p class="tt"></p>
+                            <h4 class="tt">Jerome Bell</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
                         <div class="member">
                             <img src="./images/trainer2.png" alt="">
-                            <h4 class="tt"></h4>
-                            <p class="tt"></p>
+                            <h4 class="tt">Cameron Williamson</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
                         <div class="member">
                             <img src="./images/trainer3.png" alt="">
-                            <h4 class="tt"></h4>
-                            <p class="tt"></p>
+                            <h4 class="tt">Darrell steward</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
 
 
@@ -352,18 +352,18 @@
                     <div class="row-two">
                         <div class="member">
                             <img src="./images/trainer4.png" alt="">
-                            <h4></h4>
-                            <p></p>
+                            <h4 class="tt">Dianne Russell</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
                         <div class="member">
                             <img src="./images/trainer5.png" alt="">
-                            <h4></h4>
-                            <p></p>
+                            <h4 class="tt">Cody Fisher</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
                         <div class="member">
                             <img src="./images/trainer6.png" alt="">
-                            <h4></h4>
-                            <p></p>
+                            <h4 class="tt">Theresa WEbb</h4>
+                            <p class="tt-2">Trainer</p>
                         </div>
 
                     </div>
@@ -422,7 +422,9 @@
 
 
             </div>
-            <h1 class="ff">Fitness maintainance video</h1>
+            <div class="ff">
+            <h1 >Fitness maintainance video</h1>
+        </div>
             <div class="instrument-video">
                 
                 <video  width="400px" controls src="./images2/3195943-uhd_3840_2160_25fps.mp4">
